# tree-sitter-purescript

./: Cargo.toml  binding.gyp  grammar.js  grammar.y  package.json
.github/workflows/: checks.yml
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basics.txt
